cmake_minimum_required(VERSION 3.20)
project(NURobotics_VEXU)

set(CMAKE_CXX_STANDARD 14)

include_directories("Tipping Point/15InchRobot/include")
include_directories("Tipping Point/15InchRobot/include/display")
include_directories("Tipping Point/15InchRobot/include/display/lv_core")
include_directories("Tipping Point/15InchRobot/include/display/lv_draw")
include_directories("Tipping Point/15InchRobot/include/display/lv_fonts")
include_directories("Tipping Point/15InchRobot/include/display/lv_hal")
include_directories("Tipping Point/15InchRobot/include/display/lv_misc")
include_directories("Tipping Point/15InchRobot/include/display/lv_objx")
include_directories("Tipping Point/15InchRobot/include/display/lv_themes")
include_directories("Tipping Point/15InchRobot/include/okapi")
include_directories("Tipping Point/15InchRobot/include/okapi/api")
include_directories("Tipping Point/15InchRobot/include/okapi/api/chassis")
include_directories("Tipping Point/15InchRobot/include/okapi/api/chassis/controller")
include_directories("Tipping Point/15InchRobot/include/okapi/api/chassis/model")
include_directories("Tipping Point/15InchRobot/include/okapi/api/control")
include_directories("Tipping Point/15InchRobot/include/okapi/api/control/async")
include_directories("Tipping Point/15InchRobot/include/okapi/api/control/iterative")
include_directories("Tipping Point/15InchRobot/include/okapi/api/control/util")
include_directories("Tipping Point/15InchRobot/include/okapi/api/device")
include_directories("Tipping Point/15InchRobot/include/okapi/api/device/button")
include_directories("Tipping Point/15InchRobot/include/okapi/api/device/motor")
include_directories("Tipping Point/15InchRobot/include/okapi/api/device/rotarysensor")
include_directories("Tipping Point/15InchRobot/include/okapi/api/filter")
include_directories("Tipping Point/15InchRobot/include/okapi/api/odometry")
include_directories("Tipping Point/15InchRobot/include/okapi/api/units")
include_directories("Tipping Point/15InchRobot/include/okapi/api/util")
include_directories("Tipping Point/15InchRobot/include/okapi/impl")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/chassis")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/chassis/controller")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/control")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/control/async")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/control/iterative")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/control/util")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/device")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/device/button")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/device/motor")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/device/rotarysensor")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/filter")
include_directories("Tipping Point/15InchRobot/include/okapi/impl/util")
include_directories("Tipping Point/15InchRobot/include/okapi/pathfinder")
include_directories("Tipping Point/15InchRobot/include/okapi/pathfinder/include")
include_directories("Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder")
include_directories("Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/followers")
include_directories("Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/modifiers")
include_directories("Tipping Point/15InchRobot/include/pros")

add_executable(NURobotics_VEXU
        "Tipping Point/15InchRobot/include/display/lv_core/lv_group.h"
        "Tipping Point/15InchRobot/include/display/lv_core/lv_indev.h"
        "Tipping Point/15InchRobot/include/display/lv_core/lv_lang.h"
        "Tipping Point/15InchRobot/include/display/lv_core/lv_obj.h"
        "Tipping Point/15InchRobot/include/display/lv_core/lv_refr.h"
        "Tipping Point/15InchRobot/include/display/lv_core/lv_style.h"
        "Tipping Point/15InchRobot/include/display/lv_core/lv_vdb.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_arc.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_img.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_label.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_line.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_rbasic.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_rect.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_triangle.h"
        "Tipping Point/15InchRobot/include/display/lv_draw/lv_draw_vbasic.h"
        "Tipping Point/15InchRobot/include/display/lv_fonts/lv_font_builtin.h"
        "Tipping Point/15InchRobot/include/display/lv_hal/lv_hal.h"
        "Tipping Point/15InchRobot/include/display/lv_hal/lv_hal_disp.h"
        "Tipping Point/15InchRobot/include/display/lv_hal/lv_hal_indev.h"
        "Tipping Point/15InchRobot/include/display/lv_hal/lv_hal_tick.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_anim.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_area.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_circ.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_color.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_font.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_fs.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_gc.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_ll.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_log.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_math.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_mem.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_symbol_def.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_task.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_templ.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_txt.h"
        "Tipping Point/15InchRobot/include/display/lv_misc/lv_ufs.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_arc.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_bar.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_btn.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_btnm.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_calendar.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_canvas.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_cb.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_chart.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_cont.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_ddlist.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_gauge.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_img.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_imgbtn.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_kb.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_label.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_led.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_line.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_list.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_lmeter.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_mbox.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_objx_templ.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_page.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_preload.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_roller.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_slider.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_spinbox.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_sw.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_ta.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_table.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_tabview.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_tileview.h"
        "Tipping Point/15InchRobot/include/display/lv_objx/lv_win.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_alien.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_default.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_material.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_mono.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_nemo.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_night.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_templ.h"
        "Tipping Point/15InchRobot/include/display/lv_themes/lv_theme_zen.h"
        "Tipping Point/15InchRobot/include/display/lv_conf.h"
        "Tipping Point/15InchRobot/include/display/lv_conf_checker.h"
        "Tipping Point/15InchRobot/include/display/lv_version.h"
        "Tipping Point/15InchRobot/include/display/lvgl.h"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/controller/chassisController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/controller/chassisControllerIntegrated.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/controller/chassisControllerPid.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/controller/chassisScales.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/controller/defaultOdomChassisController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/controller/odomChassisController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/model/chassisModel.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/model/hDriveModel.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/model/readOnlyChassisModel.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/model/skidSteerModel.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/model/threeEncoderSkidSteerModel.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/model/threeEncoderXDriveModel.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/chassis/model/xDriveModel.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncLinearMotionProfileController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncMotionProfileController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncPosIntegratedController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncPositionController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncPosPidController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncVelIntegratedController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncVelocityController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncVelPidController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/async/asyncWrapper.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/iterative/iterativeController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/iterative/iterativeMotorVelocityController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/iterative/iterativePositionController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/iterative/iterativePosPidController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/iterative/iterativeVelocityController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/iterative/iterativeVelPidController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/util/controllerRunner.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/util/flywheelSimulator.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/util/pathfinderUtil.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/util/pidTuner.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/util/settledUtil.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/closedLoopController.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/controllerInput.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/controllerOutput.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/control/offsettableControllerInput.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/device/button/abstractButton.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/device/button/buttonBase.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/device/motor/abstractMotor.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/device/rotarysensor/continuousRotarySensor.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/device/rotarysensor/rotarySensor.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/averageFilter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/composableFilter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/demaFilter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/ekfFilter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/emaFilter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/filter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/filteredControllerInput.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/medianFilter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/passthroughFilter.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/filter/velMath.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/odometry/odometry.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/odometry/odomMath.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/odometry/odomState.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/odometry/point.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/odometry/stateMode.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/odometry/threeEncoderOdometry.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/odometry/twoEncoderOdometry.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QAcceleration.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QAngle.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QAngularAcceleration.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QAngularJerk.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QAngularSpeed.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QArea.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QForce.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QFrequency.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QJerk.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QLength.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QMass.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QPressure.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QSpeed.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QTime.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QTorque.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/QVolume.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/units/RQuantity.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/util/abstractRate.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/util/abstractTimer.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/util/logging.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/util/mathUtil.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/util/supplier.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/util/timeUtil.hpp"
        "Tipping Point/15InchRobot/include/okapi/api/coreProsAPI.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/chassis/controller/chassisControllerBuilder.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/control/async/asyncMotionProfileControllerBuilder.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/control/async/asyncPosControllerBuilder.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/control/async/asyncVelControllerBuilder.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/control/iterative/iterativeControllerFactory.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/control/util/controllerRunnerFactory.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/control/util/pidTunerFactory.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/button/adiButton.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/button/controllerButton.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/motor/adiMotor.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/motor/motor.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/motor/motorGroup.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/rotarysensor/adiEncoder.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/rotarysensor/adiGyro.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/rotarysensor/IMU.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/rotarysensor/integratedEncoder.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/rotarysensor/potentiometer.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/rotarysensor/rotationSensor.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/adiUltrasonic.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/controller.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/controllerUtil.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/distanceSensor.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/device/opticalSensor.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/filter/velMathFactory.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/util/configurableTimeUtilFactory.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/util/rate.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/util/timer.hpp"
        "Tipping Point/15InchRobot/include/okapi/impl/util/timeUtilFactory.hpp"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/followers/distance.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/followers/encoder.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/modifiers/swerve.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/modifiers/tank.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/fit.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/io.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/lib.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/mathutil.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/spline.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/structs.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder/trajectory.h"
        "Tipping Point/15InchRobot/include/okapi/pathfinder/include/pathfinder.h"
        "Tipping Point/15InchRobot/include/okapi/api.hpp"
        "Tipping Point/15InchRobot/include/pros/adi.h"
        "Tipping Point/15InchRobot/include/pros/adi.hpp"
        "Tipping Point/15InchRobot/include/pros/api_legacy.h"
        "Tipping Point/15InchRobot/include/pros/apix.h"
        "Tipping Point/15InchRobot/include/pros/colors.h"
        "Tipping Point/15InchRobot/include/pros/distance.h"
        "Tipping Point/15InchRobot/include/pros/distance.hpp"
        "Tipping Point/15InchRobot/include/pros/ext_adi.h"
        "Tipping Point/15InchRobot/include/pros/gps.h"
        "Tipping Point/15InchRobot/include/pros/gps.hpp"
        "Tipping Point/15InchRobot/include/pros/imu.h"
        "Tipping Point/15InchRobot/include/pros/imu.hpp"
        "Tipping Point/15InchRobot/include/pros/llemu.h"
        "Tipping Point/15InchRobot/include/pros/llemu.hpp"
        "Tipping Point/15InchRobot/include/pros/misc.h"
        "Tipping Point/15InchRobot/include/pros/misc.hpp"
        "Tipping Point/15InchRobot/include/pros/motors.h"
        "Tipping Point/15InchRobot/include/pros/motors.hpp"
        "Tipping Point/15InchRobot/include/pros/optical.h"
        "Tipping Point/15InchRobot/include/pros/optical.hpp"
        "Tipping Point/15InchRobot/include/pros/rotation.h"
        "Tipping Point/15InchRobot/include/pros/rotation.hpp"
        "Tipping Point/15InchRobot/include/pros/rtos.h"
        "Tipping Point/15InchRobot/include/pros/rtos.hpp"
        "Tipping Point/15InchRobot/include/pros/screen.h"
        "Tipping Point/15InchRobot/include/pros/screen.hpp"
        "Tipping Point/15InchRobot/include/pros/serial.h"
        "Tipping Point/15InchRobot/include/pros/serial.hpp"
        "Tipping Point/15InchRobot/include/pros/vision.h"
        "Tipping Point/15InchRobot/include/pros/vision.hpp"
        "Tipping Point/15InchRobot/include/api.h"
        "Tipping Point/15InchRobot/include/main.h"
        "Tipping Point/15InchRobot/src/main.cpp" "Tipping Point/15InchRobot/src/subsystemFiles/globals.cpp" "Tipping Point/15InchRobot/src/subsystemFiles/drive.cpp" "Tipping Point/15InchRobot/src/subsystemFiles/intake.cpp" "Tipping Point/15InchRobot/src/subsystemFiles/lift.cpp" "Tipping Point/15InchRobot/include/subsystemHeaders/lift.hpp" "Tipping Point/15InchRobot/include/subsystemHeaders/claw.hpp" "Tipping Point/15InchRobot/src/subsystemFiles/claw.cpp")
